--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,9 +1,13 @@
 <% @places.each do |place|%>
-    <div class="booyah-box col-10 offset-1">
-        <h1><%= place.name %></h1>
-        <i><%= place.address %></i><br />
-        <p><%= place.description %></p><br />
-    </div>
+<div class="booyah-box col-10 offset-1">
+    <h1><%= place.name %></h1>
+    <i><%= place.address %></i><br />
+    <p><%= place.description %></p><br />
+</div>
 <% end %>
 
-<%== pagy_nav(@pagy) %>
+<div class="row">
+    <div class="mx-auto">
+        <%== pagy_bootstrap_nav(@pagy).html_safe %>
+    </div>
+</div>
