--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -25,7 +25,7 @@
     </script>
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=GEOCODER_API_KEY&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFwv6zcvbOEEfbexn4d-vsnGoKms6haMI&callback=initMap">
     </script>
 
     <div id="map"></div>
