--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -38,11 +38,8 @@
         <% end %>
     </div>
 </div>
-<div class="clear"></div>
-<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-  <%= f.input :message %>
-  <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-<% end %>
+
+
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
@@ -74,7 +71,6 @@
 </div>
 
 <h1>Comments</h1>
-
 <% @place.comments.each do |comment| %>
   <div>
     <blockquote>
@@ -85,4 +81,12 @@
       <small><%= comment.user.email %></small>
     </blockquote>
   </div>
+<% end %>
+
+<div class="clear"></div>
+<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+  <%= f.input :caption %>
+  <button>
+  <%= f.submit "Add a caption", class: "btn btn-primary"%>
+  </button>
 <% end %>
