--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,53 +1,62 @@
 <div class="booyah-box col-10 offset-1">
-    <h1><%= @place.name %></h1>
-    <i><%= @place.address %></i>
-    <br /><br />
-    <p><%= @place.description %></p>
-    <% if @place.longitude.present? && @place.latitude.present?%>
-    <script>
-        function initMap() {
-            var myLatLng = {
-                lat: <%= @place.latitude %>,
-                lng: <%= @place.longitude %>
-            };
+  <h1><%= @place.name %></h1>
+  <i><%= @place.address %></i>
+  <br /><br />
+  <p><%= @place.description %></p>
+  <% if @place.longitude.present? && @place.latitude.present?%>
+  <script>
+    function initMap() {
+      var myLatLng = {
+        lat: <%= @place.latitude %> ,
+        lng: <%= @place.longitude %>
+      };
 
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 12,
-                center: myLatLng
-            });
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 12,
+        center: myLatLng
+      });
 
-            var marker = new google.maps.Marker({
-                position: myLatLng,
-                map: map,
-                title: 'Hello World!'
-            });
-        }
-    </script>
+      var marker = new google.maps.Marker({
+        position: myLatLng,
+        map: map,
+        title: 'Hello World!'
+      });
+    }
+  </script>
 
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['MAPS_API_KEY']%>&callback=initMap">
-    </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['MAPS_API_KEY']%>&callback=initMap">
+  </script>
 
-    <div id="map"></div>
+  <div id="map"></div>
+  <% end %>
+  <br />
+  <div class="float-right">
+    <% if current_user && current_user = @place.user %>
+    <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+    <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
     <% end %>
-    <br/>
-    <div class="float-right">
-        <% if current_user && current_user = @place.user %>
-        <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-        <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
-        <% end %>
-    </div>
+  </div>
 </div>
 
+<div class="">
+  <div class="col-10 offset-1">
+    <!-- Button trigger modal comment -->
+    <button type="button" class="btn btn-primary float-left" data-toggle="modal" data-target="#commentModal">
+      Add a comment
+    </button>
 
+    <!-- Button trigger modal picture -->
+    <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#photoModal">
+      Add a photo
+    </button>
+  </div>
+</div>
+<div class="clear"></div>
+<br/>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!-- Comment Modal -->
+<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -57,36 +66,71 @@
         <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
       </div>
       <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-        <div class="modal-body">
-          <%= f.input :message %>
-          <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-        </div>
+      <div class="modal-body">
+        <%= f.input :message %>
+        <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+      </div>
       <% end %>
     </div>
   </div>
 </div>
 
-<h1>Comments</h1>
-<% @place.comments.each do |comment| %>
-  <div>
-    <blockquote>
-    <% if comment.humanized_rating.present? %>
-      <b><%= comment.rating %></b> -
+<!-- Photo Modal -->
+<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Add a photo</h4>
+      </div>
+      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+      <div class="modal-body">
+        <%= f.input :caption %>
+        <%= f.input :picture %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a caption", class: "btn btn-primary"%>
+      </div>
       <% end %>
-        <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
+    </div>
   </div>
-<% end %>
+</div>
+<div class="col-10 offset-1">
+  <h3>Comments</h3>
+</div>
+<div class="">
+  <% @place.comments.each do |comment| %>
+    <div class="col-10 offset-1">
+      <blockquote>
+        <% if comment.humanized_rating.present? %>
+        <b><%= comment.rating %></b> -
+        <% end %>
+        <%= comment.message %>
+        <small><%= comment.user.email %></small>
+      </blockquote>
+    </div>
+  <% end %>
+</div>
 
 <div class="clear"></div>
-<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
-  <%= f.input :caption %>
-  <button>
-  <%= f.submit "Add a caption", class: "btn btn-primary"%>
-  </button>
-<% end %>
+
+<div class="row">
+  <% @place.photos.each do |photo| %>
+    <div class="col-10 offset-1">
+      <% if photo.picture.present? %>
+        <%= image_tag photo.picture, class: 'img-fluid' %>
+      <% end %>
+      <% if photo.caption.present? %>
+        <%= photo.caption %></p>
+      <% end %>
+    </div>
+  <% end %>
+</div>
