--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -89,7 +89,7 @@ blockquote p {
   margin-bottom: 0;
 }
 .carousel-caption {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode";
   font-size: 60px;
   font-weight: 100;
   text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
@@ -100,4 +100,8 @@ blockquote p {
 }
 .carousel {
   box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+.avatar {
+  max-width: 90px;
 }
