--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,7 +6,7 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <%= image_tag 'slider1.jpg', class: 'img-fluid' %>
+            <%= image_tag 'slider1.jpg', class: 'img-fluid', alt:'my image' %>
             <div class="carousel-caption d-none d-md-block">
                 <h3>Find the best pizza places</h3>
             </div>
