--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <div class="booyah-box">
     <div class="row">
         <div class="col-4">
-            <%= image_tag 'user.png' %>
+            <%= image_tag 'user.png', class: 'avatar'%>
         </div>
         <div class="col-8">
-            <h1><%= @user.email %></h1>
-            <h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
-            <h4><%= @user.comments.count %> total comments</h4>
-            <h4><%= @user.comments.count %> total reviews</h4>
-            <h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
+            <h4><%= @user.email %></h4>
+            <h5>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h5>
+            <h6><%= @user.comments.count %> total comments</h6>
+            <h6><%= @user.comments.count %> total reviews</h6>
+            <h6><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h6>
         </div>
     </div>
     <div class="clear"></div>
@@ -19,7 +19,12 @@
 <div class="row">
     <% @user.comments.each do |comment| %>
     <div class="col-12 col-sm-6">
-        <h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
+
+        <% if comment.place.name.present? %>
+        <%# if comment.name.place != nil %>
+            <h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
+        <% end %>
+
         <blockquote>
             <% if comment.humanized_rating.present? %>
             <b><%= comment.humanized_rating %></b> -
@@ -35,25 +40,25 @@
 <h2 class="text-center">My Places</h2>
 <br /><br />
 <% @user.places.each do |place| %>
-  <div class="booyah-box col-10 offset-1">
+<div class="booyah-box col-10 offset-1">
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br />
     <p><%= place.description %></p><br />
 
     <% if place.user.present? %>
-      <small><%= place.user.email %></small>
+    <small><%= place.user.email %></small>
     <% end %>
 
     <% if place.comments.present? %>
-      <div class="col-12">
+    <div class="col-12">
         <blockquote>
-          <% if place.comments.last.humanized_rating.present? %>
+            <% if place.comments.last.humanized_rating.present? %>
             <b><%= place.comments.last.humanized_rating %></b> -
-          <% end %>
-          <%= place.comments.last.message %>
-          <small><%= place.comments.last.user.email %></small>
+            <% end %>
+            <%= place.comments.last.message %>
+            <small><%= place.comments.last.user.email %></small>
         </blockquote>
-      </div>
+    </div>
     <% end %>
-  </div>
+</div>
 <% end %>
